add metric & refreshing public key for google pay